testing/tests/ui/lit_on_assignment_lhs.rs
use rinja::Template;

#[derive(Template)]
#[template(
    source = "{%let 7=x%}",
    ext = "txt"
)]
struct MyTemplate;

fn main() {
}
